SaveAsImageDialog: fix checkbox label spacing in rtl

--- a/assets/scripts/dialogs/SaveAsImageDialog.scss
+++ b/assets/scripts/dialogs/SaveAsImageDialog.scss
@@ -9,10 +9,15 @@
     text-align: center;
   }
 
-  input[type='checkbox'] {
+  input[type="checkbox"] {
     margin-left: 20px;
     font-size: 25px;
     user-select: none;
+  }
+
+  [dir="rtl"] & input[type="checkbox"] {
+    margin-left: 5px;
+    margin-right: 20px;
   }
 
   label {
